--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   webview_flutter: ^0.3.7+1
   sqflite: ^1.1.0
   fish_redux: ^0.1.8
+  flutter_boost: ^0.0.415
 
 dev_dependencies:
   flutter_test:
